Update xwikisasModule.groovy
Allocate more memory.